tests/samples/extends-same-path/template.blate
// error: extends same path
{@extends './template.blate' context}
	{@slot title} Title {/slot}
{/extends}